--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -42,7 +42,7 @@ To embed Accelerometer Simulator capabilities into your own application, simply 
 }}}
 This will override the default behaviour of `UIAccelerometer` when run on the iPhone simulator. When building for device, nothing is changed in your application.
 
-After compiling and running your application on the simulator, it should now be receiving accelerometer data from the AccSim application running on your device.
+After compiling and running your application on the simulator, it should now be receiving accelerometer data from the !AccSim application running on your device.
 
 Should you need to use a different UDP port, you have to edit the `AccelerometerSimulaton.m` file and change the line
 {{{
@@ -51,7 +51,7 @@ Should you need to use a different UDP port, you have to edit the `Accelerometer
 
 == Other usages ==
 
-If you want to use the AccSim application for other purposes, check out the `testaccsim.py` Python-example. It prints out the messages sent by AccSim. The format of messages is following:
+If you want to use the AccSim application for other purposes, check out the `testaccsim.py` Python-example. It prints out the messages sent by !AccSim. The format of messages is following:
 {{{
 ACC: <deviceid>,<timestamp>,<x>,<y>,<z>
 }}}
