Edited wiki page through web user interface.

--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -30,9 +30,9 @@ In the second view (tap the bottom tap bar to activate) you can configure networ
 
 [http://accelerometer-simulator.googlecode.com/svn/wiki/pictures/AccSim2.png]
 
-When the application starts, network is set to *OFF* and no data is being sent. Switching it to *ON* opens the gates and the application begins sending UDP packets to the network. By feault it uses _broadcast_ mode, which means that all device in the same network (such as your WLAN) can receive the data. In case you plan to run multiple simulators in the same network, you should switch to _unicast_ mode and specify the target IP address manually. You may also change the port to something else if you wish (remember to change it on the receiving end as well).
+When the application starts, network is set to *OFF* and no data is being sent. Switching it to *ON* opens the gates and the application begins sending UDP packets to the network. By feault it uses _broadcast_ mode, which means that all devices in the same network (such as your WLAN) will receive the packets. In case you plan to run multiple simulators in the same network, you should switch to _unicast_ mode and specify the target IP address manually. You may also change the port to something else if you wish (remember to change it on the receiving end as well).
 
-Now that AccSim is sending accelerometer data, it's time to setup someone receiving it.
+Now that !AccSim is sending accelerometer data, it's time to setup someone receiving it.
 
 == Embedding into your application ==
 
